<resources>
    <string name="app_name">KRID</string>
    <string-array name="field_register">
        <item>Field</item>
        <item>Fashion</item>
        <item>Travel</item>
        <item>Make up</item>
        <item>Food</item>
        <item>Entertainment</item>
        <item>Medicine</item>
        <item>Education</item>
    </string-array>
    <string-array name="location">
        <item>Hà Nội</item>
        <item>Hồ Chí Minh</item>
        <item>Hải Phòng</item>
        <item>Vinh</item>
        <item>Cần Thơ</item>
    </string-array>
    <string-array name="career">
        <item>Student</item>
        <item>office workers</item>
        <item>Doctor</item>
        <item>Other</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="text_home">Home Page</string>
    <string name="text_booking">Book KOLs</string>
    <string name="text_login">Log In</string>
    <string name="text_signin">Sign In</string>
    <string name="text_campaign">Campaign</string>
    <string name="menu_booking">Book KOLs</string>
    <string name="menu_campaign">Campaign</string>
    <string name="menu_login">Log In</string>
    <string name="menu_register">Register</string>
    <string name="menu_mycampaign">My Campaign</string>
    <string name="menu_info">Account Detail</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_account">Account Detail</string>
    <string name="menu_create_campaign">Create Campaign</string>
    <string name="menu_manage_delivery">Manage Delivery</string>
    <string name="home_text_01">Influencer Marketing connection platform leading Vietnam Making connecting Influencer / KOLs easier  /n
        Become an Advertiser CREATE GENUINE ADVERTISING MATERIALS Help brands create diverse advertising materials on /n
        social channels Advertising ideas, content, images, videos, lievestream on Website, Fanpage, Instagram, Youtube channels ...</string>
    <string name="facebook_app_id">810530662416922</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_settings">App Settings</string>
    <string name="radius_nearby_msg">Enter radius in Km.</string>
    <string name="pref_title_application_version">Application Version</string>
    <string name="title_activity_settings">Settings</string>
    <string name="radius_nearby">Radius Nearby</string>
    <string name="max">Max</string>
    <string name="settings">Settings</string>
    <string name="header_main">MAIN</string>
    <string name="header_categories">CATEGORIES</string>
    <string name="header_extras">EXTRAS</string>
    <string name="header_user">USER</string>
    <string name="home">Home</string>
    <string name="tap_back_again_to_exit">Please tap back again to exit the app.</string>
    <string name="loading">Loadng...</string>
    <string name="ok">OK</string>
    <string name="no_results_found">No Results Found.</string>
    <string name="go_to_settings">Settings</string>
    <string name="location_error">Location Error</string>
    <string name="cannot_determine_location">Cannot determine location.</string>
    <string name="gps_not_on">GPS is currently turn off. Please enable it under your mobile Settings > Location.</string>
    <string name="cancel">Cancel</string>
    <string name="expires_in">Expires in</string>
    <string name="km">Km.</string>
    <string name="location_error_not_turned_on">No data to be shown because you decline the location request.</string>
    <string name="permission_error">Permission Error</string>
    <string name="permission_error_details_location">Permission location denied. You need to turn on location to get relevant results for the stores nearby.</string>
    <string name="categories">Categories</string>
    <string name="featured">Featured</string>
    <string name="favorites">Favorites</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="search">Search</string>
    <string name="about_us">About Us</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="failed_data">Failed to get data.</string>
    <string name="going">going</string>
    <string name="latest_news">Latest News</string>
    <string name="news_detail">News Detail</string>
    <string name="network_error">Network Error</string>
    <string name="no_network_connection">No Network Connection.</string>
    <string name="results">Results</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us_detail">We are small team that aims for awesome Game and Apps Development. There are no application we cannot do as long as there is music that keeps us going and creating wonderful apps.\n\nIf you are looking for awesome Teams that will make your Apps interactive and awesome. Just contact us.</string>
    <string name="terms_and_conditions_details">1.) Lorem Ipsum dolor\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n2.) Lorem Ipsum dolor\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n3.) Lorem Ipsum dolor\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="email_subject_company">Event Finder Inquiry</string>
    <string name="email_body_company">Hi! Good day.</string>
    <string name="choose_email_client">Choose an Email client :</string>
    <string name="loging_to_facebook">Login to Facebook</string>
    <string name="login_to_twitter">Login to Twitter</string>
    <string name="login_to_google_plus">Login to Google+</string>
    <string name="full_name">Full Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="logout">Logout</string>
    <string name="placeholder_fullname">Full Name</string>
    <string name="click_to_add_edit">Add Photo</string>
    <string name="login_error">Login Error</string>
    <string name="problems_encountered_login">Problem encountered during login. Try again later.</string>
    <string name="logging_in">Logging in</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="empty_fields_register">All fields should not be empty.</string>
    <string name="alert_logout_user_title">Logout User</string>
    <string name="alert_logout_user_title_details">Are you sure you want to logout?</string>
    <string name="search_uppercase">SEARCH</string>
    <string name="placeholder_search">Search Any Keywords</string>
    <string name="all_categories">All Categories</string>
    <string name="categories_uppercase">CATEGORIES</string>
    <string name="search_nearby">SEARCH NEARBY</string>
    <string name="location_error_not_turned_on_search">You declined the location request. Search functionality is disabled.</string>
    <string name="problems_encountered_while_syncing">Problem encountered while syncing. Try again later.</string>
    <string name="done">Done</string>
    <string name="my_events">My Events</string>
    <string name="drag_drop_pins">Drag and drop the pins to adjust the coordinates</string>
    <string name="upper_event_name">EVENT NAME</string>
    <string name="upper_event_datetime">EVENT DATE/TIME</string>
    <string name="upper_event_address">EVENT ADDRESS</string>
    <string name="upper_event_email_address">EMAIL ADDRESS</string>
    <string name="upper_event_contact_no">CONTACT NUMBER</string>
    <string name="upper_event_ticket_url">TICKET URL</string>
    <string name="upper_event_desc">EVENT DESCRIPTION</string>
    <string name="upper_event_category">EVENT CATEGORY</string>
    <string name="upper_event_location">EVENT LOCATION</string>
    <string name="event_name">Event Name</string>
    <string name="event_datetime">Event Date/Time</string>
    <string name="event_address">Event Address</string>
    <string name="event_email_address">Email Address</string>
    <string name="event_contact_no">Contact Number</string>
    <string name="event_ticket_url">Ticket URL</string>
    <string name="event_desc">Event Description</string>
    <string name="event_category">Select categories</string>
    <string name="event_location">Event Location</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete">Delete</string>
    <string name="hide_map">Hide Map</string>
    <string name="show_map">Show Map</string>
    <string name="location_error_not_selected">You need to select a location in the map.</string>
    <string name="drag_to_move_around">Hold &amp; Drag to move around.</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_image_details">Are you sure you want to delete image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="event_added">Event Added!</string>
    <string name="event_updated">Event Updated!</string>
    <string name="problems_encountered">Problems encountered while syncing.</string>
    <string name="syncing_data_to_server">Syncing data to server.</string>
    <string name="deleting_event">Deleting Event</string>
    <string name="add">Add</string>
    <string name="error_title_event_datetime">Date/Time Error</string>
    <string name="title_create_campaign_03">Add Details For Campaign</string>
    <string name="textview_reward">Reward</string>
    <string name="text_cash">Cash</string>
    <string name="text_hastag">Hastag</string>
    <string name="text_work_to_do">Work To Do</string>
    <string name="text_another_info">Another Info</string>
    <string name="text_website">Website</string>
    <string name="text_conditionforapply">Condition For Apply</string>
    <string name="text_age">Age Range</string>
    <string name="cbx_hotteen">Hot Teen</string>
    <string name="cbx_hotmom">Hot Mom</string>
    <string name="text_hotdadd">Hot Dad</string>
    <string name="text_male">Male</string>
    <string name="text_teen">Teen</string>
    <string name="btn_done">DONE</string>
    <string name="text_all">All</string>
    <string name="text_female">Female</string>
    <string name="text_gender">Gender</string>
    <string name="text_influencer_group">Influencer Group</string>
    <string name="text_btn_status">Status</string>
    <string name="text_campaign_name">LiNing Campaign</string>
    <string name="text_btn_period">Period</string>
    <string name="text_campaigninf_none">"Oops, you don't have any campaign! "</string>
    <string name="text_mycampaigninf_search">Search Now!!!</string>
</resources>