<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgCampaign"
        android:layout_width="160dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_marginHorizontal="@dimen/dimen_10dp"
        android:src="@drawable/mycampaigm2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/text_campaign_name"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCamStatus"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#87EA73"
                android:clickable="@bool/btn_unclick"
                android:fontFamily="casual"
                android:text="@string/text_btn_period"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btnInfStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#DA7373"
                android:clickable="@bool/btn_unclick"
                android:fontFamily="casual"
                android:text="@string/text_btn_status"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>